Update Rectangle.java